--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   "license": "ISC",
   "devDependencies": {
     "@google/clasp": "github:google/clasp",
+    "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "@parcel/transformer-sass": "^2.6.2",
     "@types/google-apps-script": "^1.0.49",
     "parcel": "^2.6.2",
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@date-io/dayjs": "^2.14.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
+    "dayjs": "^1.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.33.0",
     "react-router-dom": "^6.3.0"
   }
 }
