--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "^5.8.5",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.0",
